--- a/desafios propostos/desafio012/estilo/style.css
+++ b/desafios propostos/desafio012/estilo/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif; 
+    --font2: 'Passion One', 'cursive';
+    --font3: 'Sriracha', 'cursive';
+
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html,body {
     min-height: 10vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header{
@@ -17,8 +30,10 @@ header{
 }
 
 header > h1 {
-    padding-top: 50px;
+    padding-top: 10px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 6vw;
     /*text-transform: uppercase; =LETRAS MAÍSCULAS */
 }
 
@@ -39,8 +54,10 @@ header a:hover, footer a:hover {
 section {
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
+    line-height: 1.4em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 2vw;
 }
 
 section.normal {
@@ -54,7 +71,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.219);
 }
 
@@ -62,5 +80,5 @@ footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 2px;
 }
