--- a/desafios propostos/desafio012/estilo/style.css
+++ b/desafios propostos/desafio012/estilo/style.css
@@ -55,30 +55,51 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 1.4em;
-    padding-left: 30px;
+    padding-left: 20px;
     font-family: var(--font3);
     font-size: 2vw;
+}
+
+section > p {
+    padding-bottom: 2em;
+    padding-left: 30px;
+
 }
 
 section.normal {
     background-color: white;
     color: black;
+    padding-left: 0%;
 }
 
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.205);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.219);
+    background-color: rgba(0, 0, 0, 0.212);
+    text-shadow: 1px 1px 0px black;
 }
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+}   
 
 footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 2px;
+    padding: 1px;
 }
