--- a/exercícios/ex026/mq004/estilos/style.css
+++ b/exercícios/ex026/mq004/estilos/style.css
@@ -2,6 +2,11 @@
 
 /* Versão Mobile First */
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.em;
@@ -10,8 +15,7 @@
     box-sizing: border-box;
 }
 
-body, html {
-    width: 100vw;
+html {
     height: 100vh;
 }
 
@@ -23,7 +27,7 @@ body {
 
 main {
     background-color: rgba(255, 255, 255, 0.842);
-    width: 90vw;
+    width: 80vw;
     margin: auto;
     margin-top: 20px;
     border-radius: 10px;
